--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@ __pycache__
 main.cpp
 
 # Visual Studio Code # 
-.vscode/* 
+.vscode/
 !.vscode/settings.json 
 !.vscode/tasks.json 
 !.vscode/launch.json 
